<resources>
    <string name="app_name">常在</string>
    <string name="app_name_en">chang zai</string>
    <string name="home">首页</string>
    <string name="find">发现</string>
    <string name="chat">聊天</string>
    <string name="me">我</string>
    <string name="search_hint">大家正在搜：常在APP</string>
    <string name="care">关注</string>
    <string name="recommend">推荐</string>
    <string name="like">喜欢</string>
    <string name="comment">评论</string>
    <string name="test_text">别不高兴，开心点\n我们在这个世上可是过一天少一天。</string>
    <string name="find_en">Find</string>
    <string name="find_match">兴趣爱好匹配</string>
    <string name="find_near">附近用户</string>
    <string name="userName_tip">手机号/用户名/邮箱</string>
    <string name="passwd_tip">请输入密码</string>
    <string name="login">登录</string>
    <string name="forget_passwd">忘记密码</string>
    <string name="register_tip">还没有账号？</string>
    <string name="fast_register">立即注册</string>
    <string name="search">搜索</string>
    <string name="test_username">喵喵喵</string>
    <string name="test_usermessage">在吗</string>
    <string name="test_clock">12:00</string>
    <string name="vip">vip</string>
    <string name="vip1">1</string>
    <string name="test_tip">个性签名：不爱吃鱼的喵~</string>
    <string name="user_info_test_time">2020-01-16 14：07：08</string>
</resources>
