<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView10"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardCornerRadius="23dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/v_chat_item_head"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/ic_launcher_round" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/v_chat_item_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:fontFamily="@font/heiti"
        android:text="@string/test_username"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/cardView10"
        app:layout_constraintTop_toTopOf="@+id/cardView10" />

    <TextView
        android:id="@+id/v_chat_item_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/heiti"
        android:text="@string/test_usermessage"
        android:textColor="@color/homeUnSelectFont"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/v_chat_item_username"
        app:layout_constraintTop_toBottomOf="@+id/v_chat_item_username" />

    <TextView
        android:id="@+id/v_chat_item_clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/heiti"
        android:text="@string/test_clock"
        android:textColor="@color/homeUnSelectFont"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/v_chat_item_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/v_chat_item_username" />
</androidx.constraintlayout.widget.ConstraintLayout>