<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="46dp"
        android:layout_height="46dp"
        app:cardBackgroundColor="#00000000"
        app:cardCornerRadius="23dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/v_think_one_head"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/ic_launcher" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_think_one_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="怪盗の"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView" />

    <TextView
        android:id="@+id/tv_think_one_pasttime"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:text="30分钟前"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/tv_think_one_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_think_one_name" />

    <ImageView
        android:id="@+id/iv_think_one_add"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dot_3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="#00ffffff"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="@+id/tv_think_one_pasttime"
        app:layout_constraintTop_toBottomOf="@+id/tv_think_one_pasttime">

        <ImageView
            android:id="@+id/iv_think_one_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_launcher_background" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_think_one_text"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/test_text"
        android:textSize="16sp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <TextView
        android:id="@+id/tv_one_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/like"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_one_comment"
        app:layout_constraintTop_toTopOf="@+id/tv_one_comment" />

    <TextView
        android:id="@+id/tv_one_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/comment"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_think_one_text" />

</androidx.constraintlayout.widget.ConstraintLayout>