<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="46dp"
        android:layout_height="46dp"
        app:cardBackgroundColor="#00000000"
        app:cardCornerRadius="23dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/v_think_two_head"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/ic_launcher" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_think_two_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="怪盗の"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView4"
        app:layout_constraintStart_toEndOf="@+id/cardView4"
        app:layout_constraintTop_toTopOf="@+id/cardView4" />

    <TextView
        android:id="@+id/tv_think_two_pasttime"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:text="30分钟前"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/tv_think_two_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_think_two_name" />

    <ImageView
        android:id="@+id/iv_think_two_add"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dot_3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="93dp"
        android:layout_height="93dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="#00000000"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="@+id/tv_think_two_pasttime"
        app:layout_constraintTop_toBottomOf="@+id/tv_think_two_pasttime">

        <ImageView
            android:id="@+id/iv_think_two_img1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_launcher_background" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="93dp"
        android:layout_height="93dp"
        android:layout_marginStart="4dp"
        app:cardBackgroundColor="#00000000"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toEndOf="@+id/cardView5"
        app:layout_constraintTop_toTopOf="@+id/cardView5">

        <ImageView
            android:id="@+id/iv_think_two_img2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_launcher_background" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_think_two_text"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/test_text"
        android:textSize="16sp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/cardView5"
        app:layout_constraintTop_toBottomOf="@+id/cardView5" />

    <TextView
        android:id="@+id/tv_two_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/like"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_two_comment"
        app:layout_constraintTop_toTopOf="@+id/tv_two_comment" />

    <TextView
        android:id="@+id/tv_two_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/comment"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_think_two_text" />

</androidx.constraintlayout.widget.ConstraintLayout>