<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView7"
        android:layout_width="46dp"
        android:layout_height="46dp"
        app:cardBackgroundColor="#00000000"
        app:cardCornerRadius="23dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/v_think_four_head"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:srcCompat="@android:drawable/presence_away" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_think_four_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="怪盗の"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView7"
        app:layout_constraintStart_toEndOf="@+id/cardView7"
        app:layout_constraintTop_toTopOf="@+id/cardView7" />

    <TextView
        android:id="@+id/tv_think_four_pasttime"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:text="30分钟前"
        android:textSize="8sp"
        app:layout_constraintStart_toStartOf="@+id/tv_think_four_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_think_four_name" />

    <ImageView
        android:id="@+id/iv_think_four_add"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dot_3" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView8"
        android:layout_width="93dp"
        android:layout_height="93dp"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="#00000000"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="@+id/tv_think_four_pasttime"
        app:layout_constraintTop_toBottomOf="@+id/tv_think_four_pasttime">

        <ImageView
            android:id="@+id/iv_think_four_img1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_launcher_background" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="93dp"
        android:layout_height="93dp"
        android:layout_marginStart="4dp"
        app:cardBackgroundColor="#00000000"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toEndOf="@+id/cardView8"
        app:layout_constraintTop_toTopOf="@+id/cardView8">

        <ImageView
            android:id="@+id/iv_think_four_img2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_launcher_background" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView9"
        android:layout_width="93dp"
        android:layout_height="93dp"
        android:layout_marginTop="4dp"
        app:cardBackgroundColor="#00000000"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="@+id/cardView8"
        app:layout_constraintTop_toBottomOf="@+id/cardView8">

        <ImageView
            android:id="@+id/iv_think_four_img3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_launcher_background" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="93dp"
        android:layout_height="93dp"
        android:layout_marginStart="4dp"
        app:cardBackgroundColor="#00000000"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toEndOf="@+id/cardView9"
        app:layout_constraintTop_toTopOf="@+id/cardView9" >

        <ImageView
            android:id="@+id/iv_think_four_img4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_launcher_background" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_think_four_text"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/test_text"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/cardView9"
        app:layout_constraintTop_toBottomOf="@+id/cardView9" />

    <TextView
        android:id="@+id/tv_four_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/like"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_four_comment"
        app:layout_constraintEnd_toStartOf="@+id/tv_four_comment"
        app:layout_constraintTop_toTopOf="@+id/tv_four_comment" />

    <TextView
        android:id="@+id/tv_four_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/comment"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_think_four_text" />

</androidx.constraintlayout.widget.ConstraintLayout>